--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "tic-tac-toe",
   "main": "index.js",
   "scripts": {
-    "start": "webpack -p --env production && node src/server.js",
+    "start": "node src/server.js",
     "dev": "webpack-dev-server --env development",
     "build": "webpack -p --env production"
   },
@@ -48,6 +48,7 @@
     "redux": "^3.6.0",
     "redux-logger": "^3.0.0",
     "redux-thunk": "^2.2.0",
+    "socket.io": "^1.7.3",
     "socket.io-client": "^1.7.3",
     "webpack": "^2.2.1"
   }
