--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "webpack-merge": "^4.0.0"
   },
   "dependencies": {
+    "express": "^4.15.2",
     "prop-types": "^15.5.8",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
